--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
     <script type="module" src="lib/simplex-noise.js"></script>
     <script type="module" src="lib/misc.mjs"></script>
+    <script type="module" src="lib/world.mjs"></script>
     <script type="module" src="main.js"></script>
 </head>
 <body>
