phaser now in git submodule. Working towards AI

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="lib/phaser.js"></script>
+    <script src="lib/phaser/dist/phaser.js"></script>
     <script type="module" src="lib/simplex-noise.js"></script>
     <script type="module" src="src/main.js"></script>
 </head>
